--- a/roles/deluge/tasks/network.yml
+++ b/roles/deluge/tasks/network.yml
@@ -4,4 +4,4 @@
     name: "{{ deluge_network_name }}"
     connected:
       - "{{ swag_container_name }}"
-    appends: true
+    appends: true  # not necessary
