--- a/roles/docker/defaults/main.yml
+++ b/roles/docker/defaults/main.yml
@@ -1,3 +1,4 @@
 docker_dir: /srv
 docker_install_nvidia_runtime: auto
 docker_volumes_backup: "{{ (mergerfs_root | default('/srv')) ~ '/docker-volumes-backup' }}"
+docker_restore_volumes_backup: false
