--- a/roles/hd_idle/tasks/main.yml
+++ b/roles/hd_idle/tasks/main.yml
@@ -8,42 +8,29 @@
 
 - name: Install hd-idle
   when: hdidle.rc != 0
+  vars:
+    release:
+      tag: v1.21
   block:
     - name: Create the temporary directory
-      file:
+      ansible.builtin.file:
         path: /tmp/hd-idle
         state: directory
         owner: root
         group: root
         mode: "0755"
 
-    #    - name: Install github3 module
-    #      become: false
-    #      pip:
-    #        name: github3.py
-    #
-    #    - name: Get the latest release version
-    #      become: false
-    #      github_release:
-    #        user: adelolmo
-    #        repo: hd-idle
-    #        action: latest_release
-    #      register: release
-
     - name: Grab the latest amd64 deb package
-      get_url:
+      ansible.builtin.get_url:
         url: https://github.com/adelolmo/hd-idle/releases/download/{{ release['tag'] }}/hd-idle_{{ release['tag'] | regex_replace('^v', '') }}_amd64.deb
         dest: /tmp/hd-idle
-      vars:
-        release:
-          tag: v1.21
 
     - name: Install the deb package
-      shell:
-        cmd: cd /tmp/hd-idle && dpkg -i hd-idle*.deb
+      ansible.builtin.apt:
+        deb: /tmp/hd-idle/hd-idle_{{ release['tag'] | regex_replace('^v', '') }}_amd64.deb
 
 - name: Install the hd-idle configuration file
-  template:
+  ansible.builtin.template:
     src: hd-idle.default.j2
     dest: /etc/default/hd-idle
     owner: root
@@ -57,41 +44,41 @@
     enabled: true
     masked: false
 
-- name: Install the hd-idle parser for InfluxDB
-  when: '"influxdb" in containers | default(false)'
-  block:
-    - name: Install `uv`
-      ansible.builtin.shell:
-        cmd: curl -LsSf https://astral.sh/uv/install.sh | env UV_UNMANAGED_INSTALL="/usr/local/bin" UV_NO_MODIFY_PATH=1 sh
-
-    - name: Fix `uv`/`uvx` ownership and perms
-      ansible.builtin.file:
-        path: "{{ item }}"
-        owner: root
-        group: root
-        mode: '0755'
-      loop:
-        - /usr/local/bin/uv
-        - /usr/local/bin/uvx
-
-    - name: Copy the script
-      ansible.builtin.copy:
-        src: hd_idle_parser.py
-        dest: /usr/local/bin/hd_idle_parser.py
-        owner: root
-        group: root
-        mode: '0755'
-
-    - name: Add the script to crontab
-      ansible.builtin.cron:
-        name: "hd-idle parser"
-        user: root
-        job: >-
-          /usr/local/bin/hd_idle_parser.py
-          --influx-server https://{{ influxdb_subdomain }}.{{ host_local }}
-          --influx-token {{ influxdb_token }}
-          --influx-org {{ influxdb_org }}
-          --influx-bucket {{ influxdb_bucket }}
-          {{ hd_idle_log_file }}
-        minute: "*/5"
-        state: present
+#- name: Install the hd-idle parser for InfluxDB
+#  when: '"influxdb" in containers | default(false)'
+#  block:
+#    - name: Install `uv`
+#      ansible.builtin.shell:
+#        cmd: curl -LsSf https://astral.sh/uv/install.sh | env UV_UNMANAGED_INSTALL="/usr/local/bin" UV_NO_MODIFY_PATH=1 sh
+#
+#    - name: Fix `uv`/`uvx` ownership and perms
+#      ansible.builtin.file:
+#        path: "{{ item }}"
+#        owner: root
+#        group: root
+#        mode: '0755'
+#      loop:
+#        - /usr/local/bin/uv
+#        - /usr/local/bin/uvx
+#
+#    - name: Copy the script
+#      ansible.builtin.copy:
+#        src: hd_idle_parser.py
+#        dest: /usr/local/bin/hd_idle_parser.py
+#        owner: root
+#        group: root
+#        mode: '0755'
+#
+#    - name: Add the script to crontab
+#      ansible.builtin.cron:
+#        name: "hd-idle parser"
+#        user: root
+#        job: >-
+#          /usr/local/bin/hd_idle_parser.py
+#          --influx-server https://{{ influxdb_subdomain }}.{{ host_local }}
+#          --influx-token {{ influxdb_token }}
+#          --influx-org {{ influxdb_org }}
+#          --influx-bucket {{ influxdb_bucket }}
+#          {{ hd_idle_log_file }}
+#        minute: "*/5"
+#        state: present
