--- a/roles/snapraid/tasks/configure_snapraid.yml
+++ b/roles/snapraid/tasks/configure_snapraid.yml
@@ -11,7 +11,7 @@
 - name: Generate SnapRAID configuration
   ansible.builtin.template:
     src: snapraid.j2
-    dest: "{{ snapraid_snapraid_config }}"
+    dest: "{{ snapraid_config }}"
     owner: root
     group: root
     mode: "0644"
